# CuMat-Compiler

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  fullCompile.sh
.github/workflows/: cmake.yml
cudaBLAS/: compile.sh  compileBatch.py  curvefit.py  data.txt  driver.cu  generateCommaSep.py  generateLargeMatrix.py  generateLargeMult.py  pythonMatMultTest.py  test  test.txt  timer.py  utils.cu
cudaBLAS/addition/: add.cu
cudaBLAS/elementwise/: add.cu  comparison.cu  div.cu  logical.cu  mult.cu  pow.cu  sub.cu
cudaBLAS/mult/: gemv.cu  mult.cu
cudaBLAS/precompiled-cpu/: 10.cmProgram  100.cmProgram  150.cmProgram  2.cmProgram  20.cmProgram  200.cmProgram  250.cmProgram  300.cmProgram  4.cmProgram  40.cmProgram  400.cmProgram  500.cmProgram  6.cmProgram  60.cmProgram  8.cmProgram  80.cmProgram
cudaBLAS/precompiled-gpu/: 10.cmProgram  100.cmProgram  150.cmProgram  2.cmProgram  20.cmProgram  200.cmProgram  250.cmProgram  300.cmProgram  4.cmProgram  40.cmProgram  400.cmProgram  500.cmProgram  6.cmProgram  60.cmProgram  8.cmProgram  80.cmProgram
cudaBLAS/utils/: headers.hpp  io.cpp
preprocessor/: Preprocesor.cpp
res/: language.grammar
sidenotes/: matrix_dimension_pass.py
src/: CMakeLists.txt
src/compiler/inc/: CompilerOptions.hpp
src/compiler/src/: CMakeLists.txt  main.cpp
src/cuda_poc/: CMakeLists.txt  main.cpp
src/inc/: CompilerOptions.hpp
src/optimisation/inc/: ParMat.hpp
src/optimisation/src/: CMakeLists.txt  ParMat.cpp
src/parser/antlr4/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake
src/parser/inc/: ASTNode.hpp  ASTNode_test.hpp  AssignmentNode.hpp  BinaryExprASTNode.hpp  BinaryExprNode.hpp  BlockNode.hpp  CodeGenUtils.hpp  CuMatASTGenerator.hpp  CuMatParser.hpp  CuMatVisitor.hpp  CustomTypeDefNode.hpp  DecompNode.hpp  DimensionPass.hpp  DimensionsSymbolTable.hpp  ExprASTNode.hpp  FuncBodyExprNode.hpp  FuncDefNode.hpp  FunctionExprASTNode.hpp  FunctionExprNode.hpp  ImportsNode.hpp  InputFileNode.hpp  LLVMUtils.hpp  LiteralASTNode.hpp  LiteralNode.hpp  MatrixASTNode.hpp  MatrixNode.hpp  NameTable.hpp  ProgramNode.hpp  SliceNode.hpp  SymbolTable.hpp  TernaryExprASTNode.hpp  TernaryExprNode.hpp  TreePrint.hpp  Type.hpp  TypeCheckingSymbolTable.hpp  TypeCheckingUtils.hpp  TypeDefAttributeNode.hpp  TypeException.hpp  UnaryExprASTNode.hpp  UnaryExprNode.hpp  (+3 more)
src/parser/samples/: CuMat-testOne.cm.ll  test.cm  test.cumat  testBasic.cm  testDecomp.cm  testImportUse.cm  testMatrix.cm  testNestedMatrix.cm  testOne.cm  testSL.cm  testSlice.cm
src/parser/src/: ASTNode.cpp  ASTNode_test.cpp  AssignmentNode.cpp  BinaryExprASTNode.cpp  BinaryExprNode.cpp  BlockNode.cpp  CMakeLists.txt  CodeGenUtils.cpp  CuMatASTGenerator.cpp  CuMatGrammar.g4  CuMatLexer.g4  CuMatParser.cpp  CuMatParser.g4  CuMatVisitor.cpp  CustomTypeDefNode.cpp  DecompNode.cpp  DimensionPass.cpp  DimensionSymbolTable.cpp  ExprASTNode.cpp  FuncBodyExprNode.cpp  FuncDefNode.cpp  FunctionExprASTNode.cpp  FunctionExprNode.cpp  ImportsNode.cpp  InputFileNode.cpp  LiteralASTNode.cpp  LiteralNode.cpp  MatrixASTNode.cpp  MatrixNode.cpp  NameTable.cpp  ProgramNode.cpp  SliceNode.cpp  SymbolTable.cpp  TLexer.g4  TParser.g4  TernaryExprASTNode.cpp  TernaryExprNode.cpp  TreePrint.cpp  Type.cpp  TypeCheckingSymbolTable.cpp  (+9 more)
src/parser/src/passes/: DimensionPass.cpp
src/preprocessor/: CMakeLists.txt  Preprocesor.cpp  ProgramGraph.cpp  ProgramGraph.h
src/preprocessor/inc/: Preprocessor.h  Preprocessor.hpp  ProgramGraph.h  ProgramGraph.hpp
src/preprocessor/src/: CMakeLists.txt  Preprocessor.cpp  ProgramGraph.cpp
src/src/: CMakeLists.txt  main.cpp
